--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "@shadcn/ui": "^0.0.4",
     "@t3-oss/env-nextjs": "^0.10.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.474.0",
     "next": "^15.0.1",
     "react": "^18.3.1",
